fix overflow

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -5,8 +5,12 @@
   overflow-x: hidden;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .no-padding {
-  padding: 0;
+  padding: 0 !important;
 }
 
 .center-text {
@@ -42,6 +46,10 @@ h2.show-page {
   margin: 0 auto;
   background: none;
   text-align: center;
+}
+
+.single-game {
+  margin-bottom: 15px;
 }
 
 /*show page*/
